--- a/packages/phoenix-builder/package.json
+++ b/packages/phoenix-builder/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-react": "^7.16.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
-    "rollup": "^2.59.0"
+    "rollup": "^2.59.0",
+    "rollup-plugin-postcss": "^4.0.1"
   }
 }
