--- a/packages/phoenix/package.json
+++ b/packages/phoenix/package.json
@@ -29,5 +29,6 @@
   },
   "devDependencies": {
     "@pgdbv/phoenix-builder": "^1.0.1"
-  }
+  },
+  "gitHead": "c1c049cc956743c5136bbe96674b4d1e1360be7b"
 }
